--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 :root {
   --background: white;
+  --button: #ddd;
   --green: green;
   --red: #e30101;
   --text-color: #111;
-  --button: #ddd;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #111;
+    --button: #333;
     --green: #019901;
     --red: red;
     --text-color: white;
-    --button: #333;
   }
 }
 
@@ -21,10 +21,10 @@
 }
 
 body {
+  background-color: var(--background);
+  color: var(--text-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
-  color: var(--text-color);
-  background-color: var(--background);
 }
 
 div.app {
@@ -84,12 +84,12 @@ p.button-row {
 
 #clear-button {
   background: var(--button);
+  border-radius: 8px;
+  border: none;
   color: inherit;
   font-size: 80%;
-  border: none;
-  border-radius: 8px;
-  padding: 4px 12px;
   margin: 0;
+  padding: 4px 12px;
 }
 
 #results {
@@ -108,6 +108,11 @@ p.good {
 }
 p.bad {
   color: var(--red);
+}
+
+a.github-link {
+  text-align: right;
+  font-size: 80%;
 }
 
 @media (max-width: 600px) {
