--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,23 @@ body {
   font-size: 16px;
 }
 
-div.app {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+h1 {
+  padding-bottom: 16px;
+}
+
+h1, main.app {
+  margin: auto;
+  max-width: 760px;
   width: 100%;
 }
 
-div.app > * {
+main.app {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+main.app > * {
   display: flex;
   flex-basis: 50%;
   flex-direction: column;
@@ -119,7 +128,7 @@ a.github-link {
 }
 
 @media (max-width: 600px) {
-  div.app > form, div.app > div {
+  main.app > form, main.app > div {
     flex-basis: 100%;
     padding-left: 0;
     padding-right: 0;
